[package]
name = "minimina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
dirs = "5.0.1"
log = { version = "0.4" }
env_logger = { version = "0.10.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = "0.4"
users = "0.11"
reqwest = { version = "0.11", features = ["blocking"] }
url = "2.2"
tempdir = "0.3.7"

