[package]
name = "minimina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
dirs = "5.0.1"
log = { version = "0.4.20" }
env_logger = { version = "0.10.0" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
chrono = "0.4.31"
uzers = "0.11.3"
reqwest = { version = "0.11.20", features = ["blocking"] }
url = "2.4.1"
tempdir = "0.3.7"

