[package]
name = "minimina"
version = "0.1.2"
edition = "2021"
license = "LICENSE"
description = """\
MiniMina is a command line tool aimed at providing the capability \
to spin up Mina networks locally on a user's computer."""


[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
dirs = "5.0.1"
log = { version = "0.4.20" }
env_logger = { version = "0.10.0" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
chrono = "0.4.31"
uzers = "0.11.3"
reqwest = { version = "0.11.20", features = ["blocking"] }
url = "2.4.1"
tempdir = "0.3.7"

[package.metadata.deb]
maintainer = "Piotr Stachyra <piotr.stachyra@minaprotocol.com>"
copyright = "2023, Piotr Stachyra <piotr.stachyra@minaprotocol.com"
depends = "$auto"
assets = [
    ["target/release/minimina", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/minimina/README", "644"],
]